# mend

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  rust.yml
examples/: mend-recipes.toml  mend.toml
src/: config.rs  main.rs  progress.rs  repo.rs  run.rs
src/snapshots/: mend__config__tests__load_mend_from_toml.snap  mend__run__tests__create_run_status_empty.snap  mend__run__tests__create_run_status_include_hooks.snap  mend__run__tests__create_run_status_include_hooks_matching_on_tag.snap  mend__run__tests__create_run_status_one_step.snap  mend__run__tests__create_run_status_resolve_recipe.snap  mend__run__tests__run_all_steps_reports_failure_with_failed_step.snap  mend__run__tests__run_step.snap  mend__run__tests__run_step_reports_failure_and_resets.snap  mend__tests__cli_fails_loading_.snap  mend__tests__cli_fails_loading_default_file.snap  mend__tests__cli_fails_loading_missing_include.snap  mend__tests__cli_fails_loading_missing_includes.snap  mend__tests__cli_fails_loading_specified_file.snap  mend__tests__it_works.snap  mend__tests__load_mend_from_toml.snap
tests/: TESTING.md
tests/data/: missing-include.toml
