[package]
name = "mend"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
dockerfile-parser = "0.8.0"
indicatif = "0.17.6"
serde = { version = "1.0.187", features = ["derive"] }
toml = "0.7.6"
