[package]
name = "mend"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.0.29", features = ["derive"] }
indicatif = "0.17.6"
serde = { version = "1.0.187", features = ["derive"] }
toml = "0.7.6"

[dev-dependencies]
insta = { version = "1.31.0", features = ["yaml"] }
